1904-01-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (MenuInteraction):
	tried to fix core dump w/ windowlist

2000-01-09  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm.c (main):
	allocate g_argv and add -s to it when dual head is detected;
	(usage): added missing -cmd, removed obsolete -blackout

2001-01-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (GetMenuOptions):
	properly handle missing width and height arguments if reference
	rectangle of position hints
	(get_prefered_popup_position):
	(MenuInteraction):
	(select_menu_item):
	fixed menu placement

	* fvwm/icons.c (CreateIconWindow):
	* fvwm/events.c (HandlePropertyNotify):
	different definition of active icons

2001-01-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* tests/purify/purify.fvwm2rc:
	added Popdown... menu style tests

	* fvwm/conditional.c (WindowIdFunc):
	fixed WindowId syntax

2001-01-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (MenuInteraction):
	fixed core dump
	(menu_func):
	(MenuInteraction):
	fixed a small problem with posted menus

2001-01-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c:
	renamed some macros and moved them to defaults.h
	(NewMenuStyle):
	fixed maximum item relief thickness
	(pop_menu_up):
	(MenuInteraction):
	delay popping down a menu to next loop pass so that the background does
	not shine through if the area is immediately covered again
	(NewMenuStyle):
	new menu styles PopdownImmediately/PopdownDelayed which is a trivial
	byproduct of above fixes; also introduced PopdownDelay
	(MenuInteraction):
	posted menus are not unmapped when the pointer enters the root window
	(MenuInteraction):
	fixed a popup logic bug
	(select_menu_item):
	(paint_menu):
	reduced redrawing with D/B gradients

	* fvwm/events.c (flush_accumulate_expose):
	fixed logic in vertical direction; cures menu redraw problem

	* fvwm/virtual.c (HandlePaging):
	reindented some code

	* libs/defaults.h:
	tuning parameters for keyboard shortcut handling go here
