@@ -1974,11 +1974,7 @@ if you are using the
 .I PopupDelayed
 style.
 .I RemoveSubmenus
-is not very useful when using
-.I PopupImmediately
-or a
-.I PopupDelay
-other than zero.
+affects menu navigation with the keyboard.
 
 .I SelectOnRelease
 takes an optional key name as an argument.  If the given key is
